close some todos